overlays/dev/helloworld/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: helloworld-mtls
  namespace: helloworld
spec:
  selector:
    matchLabels:
      app: helloworld
  mtls:
    mode: STRICT
  portLevelMtls:
    8080:
      mode: PERMISSIVE
