overlays/dev/helloworld/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: helloworld
  namespace: helloworld
spec:
  hosts:
    - hello.lab.DOMAIN.com  # replace with your domain
  gateways:
    - istio-ingress/helloworld-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: helloworld
            port:
              number: 8080
