overlays/dev/helloworld/authorizationpolicy-metrics.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: helloworld-allow-metrics
  namespace: helloworld
spec:
  selector:
    matchLabels:
      app: helloworld
  action: ALLOW
  rules:
    - to:
        - operation:
            paths: ["/metrics"]
