overlays/dev/helloworld/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: helloworld-allow-ingress
  namespace: helloworld
spec:
  selector:
    matchLabels:
      app: helloworld
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/istio-ingress/sa/istio-ingress"
